--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -77,7 +77,7 @@ jobs:
           export BOOTSTRAP_SERVER="${{ secrets. BOOTSTRAP_SERVER }}" SCHEMA_REGISTRY_API_KEY="${{ secrets.SCHEMA_REGISTRY_API_KEY }}"
           export SCHEMA_REGISTRY_API_SECRET="${{ secrets.SCHEMA_REGISTRY_API_SECRET }}" SECURITY_PROTOCOL="${{ secrets.SECURITY_PROTOCOL }}"
           export SSL_MECHANISM="${{ secrets.SSL_MECHANISM }}"
-          docker compose up -d
+          docker compose up
       - name: Docker prune to remove old images
         run: |
           docker system prune -f
