--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
       - SCHEMA_REGISTRY_API_SECRET=${SCHEMA_REGISTRY_API_SECRET}
       - SECURITY_PROTOCOL=${SECURITY_PROTOCOL}
       - SSL_MECHANISM=${SSL_MECHANISM}
-      - ACCESS_KEY=${ACCESS_KEY}
-      - ACCESS_SECRET_ACCESS_KEY=${ACCESS_SECRET_ACCESS_KEY}
+      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
 
 
